crates/tui/tests/snapshots/snapshot_tests__snapshot_jobs_screen_auto_refresh.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs [AUTO]────────────────────────────────────────────────────────────┐
│SID ↑                         Status          Duration   Results    Events    │
│scheduler_admin_search_123456 Done            5.23s      100        500       │
│admin_search_9876543210       Running (65%)   12.45s     450        2000      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health | q:Quit                                 │
└──────────────────────────────────────────────────────────────────────────────┘
