crates/tui/tests/snapshots/snapshot_tests__snapshot_narrow_terminal.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                           │
└──────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────┐
│SID ↑     Status          Duration   Results    Events    │
│scheduler Done            5.23s      100        500       │
│admin_sea Running (65%)   12.45s     450        2000      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health | q:Quit    │
└──────────────────────────────────────────────────────────┘
