crates/tui/tests/snapshots/snapshot_tests__snapshot_search_screen_loading.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│index=main | stats count                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│███████████████████████████Running search... (45%)                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────────────────────────┐
│               No results. Enter a search query and press Enter.              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Loading... 45% | Tab:Next Screen | Shift+Tab:Previous Screen | q:Quit        │
└──────────────────────────────────────────────────────────────────────────────┘
