crates/tui/tests/snapshots/snapshot_tests__snapshot_search_screen_with_results.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│index=main ERROR                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Search complete: index=main ERROR                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results (1-2 / 2 total)───────────────────────────────────────────────────────┐
│{                                                                             │
│  "_time": "2024-01-15T10:30:00.000Z",                                        │
│  "level": "ERROR",                                                           │
│  "message": "Connection failed"                                              │
│}                                                                             │
│{                                                                             │
│  "_time": "2024-01-15T10:29:00.000Z",                                        │
│  "level": "ERROR",                                                           │
│  "message": "Timeout error"                                                  │
│}                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | q:Quit                         │
└──────────────────────────────────────────────────────────────────────────────┘
